fix: align Create button to lower right after journal removal

--- a/scss/module.scss
+++ b/scss/module.scss
@@ -403,7 +403,7 @@
 /* Create button section */
 .qc-create-section {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     padding: 4px 0 0;
 }
